2002-02-24  Jody Goldberg <jody@gnome.org>

	* bonobo/bonobo-ui-component.h (BonoboUIVerb) : const the name to
	  silence some warnings.

2002-02-25  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c (impl_set_property): 
	fix uint -> boolean.

2002-02-25  Johan Dahlin  <jdahlin@telia.com>

	* bonobo/bonobo-ui-engine.h (BONOBO_IS_UI_ENGINE): Make macros and
	bonobo_ui_engine_get_type public

2002-02-25  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: REALLY Added Malay (ms)to ALL_LINGUAS.

2002-02-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(control_connection_died_cb): upd. to disconnect us
	safely & fire a "system_exception" signal.

	* tests/Makefile.am (-DBONOBO_TOPBUILDDIR): define.

	* tests/test-ui-auto.c (test_ui_performance): use it.

2002-02-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (class_init): add
	cmd_id & commands_id.
	(find_sync_for_node): we have no sync. for commands.

	* bonobo/bonobo-ui-sync-keys.c
	(impl_bonobo_ui_sync_keys_can_handle): accel.

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_can_handle): expand
	scope to accelerate.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_can_handle): ditto.

2002-02-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_can_handle): optimize.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_can_handle): ditto.

	* bonobo/bonobo-ui-util.c
	(lookup_stock_compat): improve the mapping

2002-02-19  James Willcox  <jwillcox@cs.indiana.edu>

	* bonobo/bonobo-file-selector-util.c (run_file_selector):
	Fixed the behavior of bonobo_file_selector_open returning a local
	path instead of a text uri when using the GTK file selector.

2002-02-19  Michael Meeks  <michael@ximian.com>

	* Version 1.112.0

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove GNOME_COMMON_INIT, GNOME_PLATFORM_GNOME_2