@@ -36,7 +36,7 @@ dnl Start of pkg-config checks
 dnl
 BONOBOUI_MODULES="libgnomecanvas-2.0 >= 1.111.0 libbonobo-2.0 >= 1.112.0 \
 		  libgnome-2.0 >= 1.111.0 bonobo-activation-2.0 >= 0.9.3 \
-		  gconf-2.0 >= 1.1.8 gtk+-2.0 >= 1.3.12"
+		  gconf-2.0 >= 1.1.8 gtk+-2.0 >= 1.3.14"
 PKG_CHECK_MODULES(BONOBOUI, $BONOBOUI_MODULES)
 AC_SUBST(BONOBOUI_CFLAGS)
 AC_SUBST(BONOBOUI_LIBS)
