@@ -1,3 +1,13 @@
+2002-02-26  Paolo Maggi  <maggi@athena.polito.it>
+
+	* configure.in: now libbonoboui needs gtk+ 1.3.14
+
+	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_state): 
+	Show the resize grip if resize_grip is set to 1.
+
+	* bonobo/bonobo-file-selector-ui.c: fixed to work
+	with the new GtkFileSelection API for multiple files
+
 2002-02-24  Jody Goldberg <jody@gnome.org>
 
 	* bonobo/bonobo-ui-component.h (BonoboUIVerb) : const the name to
